--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Estilos para #filter-container */
 #filter-container {
   display: flex;
   justify-content: flex-end;
@@ -5,19 +6,14 @@
   margin: 1rem 0;
 }
 
-#filter-container button {
+#filter-container button, #filter-container select {
   font-family: Roboto;
   font-size: 0.9rem;
   min-height: 1.8rem;
   margin: 0 1rem;
 }
 
-#filter-container select {
-  font-family: Roboto;
-  font-size: 0.9rem;
-  min-height: 1.8rem;
-}
-
+/* Estilos para #projects-main-list */
 #projects-main-list {
   min-height: 35vh;
 }
@@ -31,16 +27,16 @@
   display: flex;
   justify-content: space-between;
   min-height: 8rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Adicionando sombra */
 }
 
-.api-result-list h6{
+.api-result-list h6, .api-result-list p {
   max-width: 80%;
 }
 
 .api-result-list p {
   color: #777780;
   font-size: 83%;
-  max-width: 80%
 }
 
 .button-container {
@@ -51,22 +47,24 @@
 }
 
 .button-container button {
-  padding:0.8rem;
+  padding: 0.8rem;
   border-radius: 25px;
   border: none;
-  background-color: 
-#61d09e;
-color: white;
-font-weight: bold;
-transition: 0.3s ease-out;
+  background-color: #35b37a;
+  font-weight: bold;
+  transition: 0.2s ease-out;
+  cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Adicionando sombra */
 }
 
 .button-container button:hover {
-  background-color: #198754;
+  background-color: #61d09e;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); /* Aumentando a sombra ao passar o mouse */
 }
 
 .button-container a {
   color: white;
+  text-decoration: none;
 }
 
 #projects-main-list .loader {
@@ -82,6 +80,7 @@ transition: 0.3s ease-out;
   text-align: center;
 }
 
+/* Estilos para #pagination */
 #pagination {
   font-family: Roboto;
   padding: 1rem;
@@ -96,16 +95,19 @@ transition: 0.3s ease-out;
   border: none;
   border-radius: 25px;
   outline: none;
-  background-color: #61d09e;
+  background-color: #35b37a;
   color: white;
   font-weight: 700;
   padding: 0.5rem 1rem;
   margin: 0 0.5rem;
   transition: 0.2s ease-out;
+  cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Adicionando sombra */
 }
 
 #pagination button:hover {
-  background-color: #198754;
+  background-color: #61d09e;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); /* Aumentando a sombra ao passar o mouse */
 }
 
 #pagination button:disabled {
@@ -113,17 +115,20 @@ transition: 0.3s ease-out;
   cursor: not-allowed;
 }
 
+/* Estilos para botões personalizados */
 .custom-btn {
-  padding:0.8rem;
+  padding: 0.8rem;
   border-radius: 25px;
   border: none;
-  background-color: #61d09e;
+  background-color: #35b37a;
   color: white;
   font-weight: bold;
-  transition: 0.3s ease-out;
+  transition: 0.2s ease-out;
   cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Adicionando sombra */
 }
 
 .custom-btn:hover {
-  background-color: #198754;
+  background-color: #61d09e;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); /* Aumentando a sombra ao passar o mouse */
 }
