--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@
   font-weight: bold;
   transition: 0.2s ease-out;
   cursor: pointer;
+  margin: 0 1rem 0 0;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Adicionando sombra */
 }
 
